Adding UNO Page
added page for UNO details and Subjects currently studying

--- a/html/photos.html
+++ b/html/photos.html
@@ -20,6 +20,7 @@
   <a href="./../index.html">About Me</a>
   <a href="./contact.html">Contact</a>
   <a href="./photos.html">Photos</a>
+  <a href="./uno.html">UNO</a>
 </div>
 
 <section>
