--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <a href="./../index.html">About Me</a>
   <a href="html/contact.html">Contact</a>
   <a href="html/photos.html">Photos</a>
+  <a href="html/uno.html">UNO</a>
 
 </div>
 <marquee style="color: red">Welcome to my Profile</marquee>
