--- a/html/uno.html
+++ b/html/uno.html
@@ -47,6 +47,16 @@
   </article>
 </section>
 
+<div>
+  <h2>Here are some pics from UNO for my Wife's Graduation and Capstone Project. She loved every min of her time spent at UNO.</h2>
+    <br/>
+    <div>
+      <img src="./../img/ishma.jpg" alt="Wife's graduation" width="400" height="500" >
+    </div>
+
+
+</div>
+
 
 <footer class="footer-class">
   <p>Thanks For Visiting My Website</p>
