--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYEPE html>
 <html lang="en">
 <head>
-<title>My First Website</title>
+<title>My Profile</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/basicStyle.css">
